<resources>
    <string name="app_name">Европрофиль</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Здравствуйте!"</string>
    <string name="invalid_login">Некорректный логин</string>
    <string name="invalid_phone">Некорректный номер телефона</string>
    <string name="invalid_email">Некорректный email</string>
    <string name="invalid_password">Некорректный пароль</string>
    <string name="login_failed">Некорректный email</string>
    <string name="registration_title">Регистрация</string>
    <string name="register_text_title">ФИО</string>
    <string name="enter_name">Введите ваше ФИО</string>
    <string name="enter_email">Введите email</string>
    <string name="password_title">Пароль</string>
    <string name="register">Зарегестрироваться</string>
    <string name="email">Email</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password_dots">••••••••</string>
    <string name="already_have">Уже есть аккаунт?</string>
    <string name="enter">Войти</string>
    <string name="login">Логин</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="new_user_ask">Новый пользователь?</string>
    <string name="subtitle_login">Заполните поля или\n Войдите с помощью Google</string>
    <string name="choose_login_type">номер телефона/email</string>
    <string name="district_1"><u>Заволжский р-он</u></string>
    <string name="district_2"><u>Засвияжский р-он</u></string>
    <string name="number_1"><u>+7 (902) 211 40-77</u></string>
    <string name="number_2"><u>+7 (908) 479 17-17</u></string>
    <string name="number_3"><u>+7 (908) 479 19-91</u></string>
    <string name="short_number_1"><u>26-00-26</u></string>
    <string name="short_number_2"><u>27-77-01</u></string>
    <string name="short_number_3"><u>63-66-33</u></string>

    <string name="slogan_info">Аккуратно, чисто и в срок <font color='#0D6EFD'> установим пластиковые окна </font> с гарантией 5 лет</string>
    <string name="slogan_plus">и бесплатным cервисным обслуживанием 2 года</string>
    <string name="first_info"><font color='#0D6EFD'> 19 лет </font> занимаемся пластиковыми окнами по Ульяновской области</string>
    <string name="second_info"><font color='#0D6EFD'> Более 20 000 клиентов  </font> в Ульяновске доверили нам установку пластиковых окон в свои квартиры и дома</string>
    <string name="third_info"><font color='#0D6EFD'> 80 % клиентов </font>прихидят к нам <font color='#0D6EFD'> по рекомендации </font> тех, кому мы установили пластиковые окна</string>
    <string name="fourth_info"><font color='#0D6EFD'> Профили и фурнитура </font> от надёжных производителей <u> С какими профилем и фурнитурой работаем?</u></string>
    <string name="how_work">Работая с нами, вы можете быть уверены, что мы найдем лучшее и наиболее практичное решение именно для вас. Мы стремимся удовлетворить любые запросы клиентов с соблюдением всех технологий - от замера до монтажа. Вы получите качественные окна точно в срок.</string>

    <string name="client_principles">Нам доверяют и рекомендуют друзьям, потому что мы придерживаемся следующих принципов:\n <font color='#0D6EFD'>&#9679;</font> Индивидуальный подход к каждому Клиенту\n <font color='#0D6EFD'>&#9679;</font> Прозрачность работы на всех этапах\n <font color='#0D6EFD'>&#9679;</font> Точное выполнение обязательств\n <font color='#0D6EFD'>&#9679;</font> Полная конфиденциальность\n <font color='#0D6EFD'>&#9679;</font> Защита интересов клиента</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">Новости</string>
    <string name="see_all">Посмотреть всё</string>
    <string name="parameters">Характеристики</string>
    <string name="contact_info">ИНН 7328086844  ОГРН 1157325008631</string>
</resources>