<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.accountpages.contactinfo.ContactInformationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/contacts_title"
        android:text="Контактная информация"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway_bold"
        android:textSize="24sp"/>

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/contact_map"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="20dp"
        android:background="@drawable/roundedcontainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_number_6" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/address_subtitle"
            android:layout_width="wrap_content"
            android:text="Адреса и телефоны"
            android:fontFamily="@font/raleway_bold"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/district_1"
            android:layout_width="wrap_content"
            android:text="@string/district_1"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_subtitle"/>

        <TextView
            android:id="@+id/address_subtitle_name_1"
            android:layout_width="wrap_content"
            android:text="пр-т Ленинского Комсомола, 51"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/district_1"/>

        <TextView
            android:id="@+id/address_number_1_title"
            android:layout_width="wrap_content"
            android:text="тел.:"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_subtitle_name_1"/>

        <TextView
            android:id="@+id/address_number_1"
            android:layout_width="wrap_content"
            android:text="@string/number_1"
            android:fontFamily="@font/poppins"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/address_number_1_title"
            app:layout_constraintTop_toBottomOf="@id/address_subtitle_name_1"/>

        <TextView
            android:id="@+id/address_number_2_title"
            android:layout_width="wrap_content"
            android:text="тел.:"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_number_1_title"/>


        <TextView
            android:id="@+id/address_number_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/blue"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/short_number_1"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/address_number_2_title"
            app:layout_constraintTop_toBottomOf="@id/address_number_1" />

        <TextView
            android:id="@+id/address_subtitle_name_2"
            android:layout_width="wrap_content"
            android:text="пр-т Ульяновский, 24"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_number_2_title"/>

        <TextView
            android:id="@+id/address_number_3_title"
            android:layout_width="wrap_content"
            android:text="тел.:"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_subtitle_name_2"/>

        <TextView
            android:id="@+id/address_number_3"
            android:layout_width="wrap_content"
            android:text="@string/number_2"
            android:fontFamily="@font/poppins"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/address_number_3_title"
            app:layout_constraintTop_toBottomOf="@id/address_subtitle_name_2"/>

        <TextView
            android:id="@+id/address_number_4_title"
            android:layout_width="wrap_content"
            android:text="тел.:"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_number_3_title"/>


        <TextView
            android:id="@+id/address_number_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/blue"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/short_number_2"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/address_number_4_title"
            app:layout_constraintTop_toBottomOf="@id/address_number_3" />


        <TextView
            android:id="@+id/district_2"
            android:layout_width="wrap_content"
            android:text="@string/district_2"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_number_4_title"/>

        <TextView
            android:id="@+id/address_subtitle_name_3"
            android:layout_width="wrap_content"
            android:text="ул. Шолмова, 20"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/district_2"/>

        <TextView
            android:id="@+id/address_number_5_title"
            android:layout_width="wrap_content"
            android:text="тел.:"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_subtitle_name_3"/>

        <TextView
            android:id="@+id/address_number_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins"
            android:text="@string/number_3"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/address_number_5_title"
            app:layout_constraintTop_toBottomOf="@id/address_subtitle_name_3"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/address_number_6_title"
            android:layout_width="wrap_content"
            android:text="тел.:"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_number_5_title"/>

        <TextView
            android:id="@+id/address_number_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/blue"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/short_number_3"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/address_number_6_title"
            app:layout_constraintTop_toBottomOf="@id/address_number_5" />

        <TextView
            android:id="@+id/link_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ссылка на сайт"
            android:fontFamily="@font/raleway_bold"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_number_6_title"/>

        <TextView
            android:id="@+id/link"
            android:text="https://evroprofil173.ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:paddingBottom="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/link_title"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>



</LinearLayout>

